# leventrie

./: .gitignore  CMakeLists.txt  MANIFEST.in  setup.py  tox.ini
include/leventrie/: automaton.h  trie.h
src/: leventrie_module.cpp
src/leventrie/: CMakeLists.txt  automaton.cpp  trie.cpp  trie.h
tests/: test_leventrie.py
